# kanidm-init

./: Cargo.toml  Dockerfile  Dockerfile copy  ReadMe.md  build.sh  config.toml  entrypoint.sh  roadmap.md  spec.md
.github/workflows/: build.yml
src/: client.rs  conf.rs  error.rs  lib.rs  logic.rs  main.rs  oauth2.rs  person.rs  util.rs
