[package]
name = "kanidm_init"
version = "0.1.0"
edition = "2024"

[dependencies]
# 必須: 依存関係の C ライブラリを静的にビルドするために指定
openssl = { version = "0.10", features = ["vendored"] }

# コア機能と型定義
kanidmd_core = { git = "https://github.com/kanidm/kanidm" }

# 非同期通信とインターフェース
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
serde = "1.0.228"
kanidm-client = { version = "1.9", default-features = false, features = ["openssl"] }
toml = "1.1.2"
http = "1.4.0"
url = "2.5.8"
serde_json = "1.0.149"
thiserror = "2.0.18"

[patch.crates-io]
subtle = { git = "https://github.com/dalek-cryptography/subtle" }
